fix: ticker z-index 수정

--- a/css/_animation.scss
+++ b/css/_animation.scss
@@ -9,3 +9,12 @@
     opacity: 1;
   }
 }
+
+@keyframes ani__ticker {
+  0% {
+    transform: translateX(-25%);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
