--- a/css/_page.scss
+++ b/css/_page.scss
@@ -13,8 +13,10 @@ body.--invert {
   position: absolute;
   z-index: -9999;
   text-indent: 9999;
-  width: 0;
-  height: 0;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  clip: rect(0, 0, 0, 0);
 }
 .logo {
   @include util__flex(center, center);
@@ -817,6 +819,7 @@ body.--invert {
 }
 // // 버튼
 
+// ticker
 .ticker {
   overflow: hidden;
   position: relative;
@@ -826,26 +829,32 @@ body.--invert {
   &--active {
     transform: translateY(0);
   }
-  &::after {
-    content: '';
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    left: 0;
-    top: 0;
-    backdrop-filter: blur(2rem);
-  }
+
   &__inner {
+    @include util__flex();
+  }
+  &__scroller {
     @include util__flex(flex-start, center);
+    animation: ani__ticker 10s linear infinite both;
+    position: relative;
+    &::after {
+      content: '';
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      left: 0;
+      top: 0;
+      backdrop-filter: blur(2rem);
+    }
   }
   &__item {
     display: inline-block;
     font-size: 1.8rem;
     line-height: 1.89;
-    padding: 1rem 7.2rem;
-    flex-shrink: 0;
+    flex: 1 0 0;
     font-weight: 600;
     color: $color__white;
+    white-space: nowrap;
 
     &:nth-child(3n + 1) {
       background-color: $color__pink;
@@ -859,10 +868,13 @@ body.--invert {
     }
   }
   &__text {
+    display: block;
     position: relative;
-    z-index: 1;
+    z-index: 2;
+    padding: 1rem 7.2rem;
   }
 }
+// // ticker
 
 // top 버튼
 .top-btn {
@@ -870,9 +882,12 @@ body.--invert {
   width: 5rem;
   height: 5rem;
   background: rgb(17, 17, 17);
-  position: absolute;
+  // position: absolute;
+  // right: 10rem;
+  // bottom: 26rem;
+  position: fixed;
   right: 10rem;
-  bottom: 26rem;
+  bottom: 4rem;
   cursor: pointer;
   img {
     transform: rotate(180deg);
